[package]
name = "stratus"
version = "0.1.0"
edition = "2021"
description = "Multi-language TypeSQL compiler - compile-time SQL generation"

[features]
wasm = ["wasm-bindgen"]

[dependencies]
# Parsing
nom = "7.1"
thiserror = "1.0"

# JSON Schema
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Code generation
quote = "1.0"
proc-macro2 = "1.0"

# CLI
clap = { version = "4.4", features = ["derive"] }

# Utilities
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
sha2 = "0.10"
once_cell = "1.19"

# Database
postgres = { version = "0.19", features = ["with-chrono-0_4"] }

# WASM support
wasm-bindgen = { version = "0.2", optional = true }
serde-wasm-bindgen = { version = "0.6", optional = true }

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"
